--- a/media.css
+++ b/media.css
@@ -69,4 +69,21 @@ top:600px;
 }
 
 /* NAV AND TOP END HERE */
+
+/* HABIT SECTION STAR HERE */
+.habit-main-div{
+flex-direction: column;
+max-width: 300px;
+/* border: 5px solid red; */
+margin: auto;
+
+}
+.habit-para1{
+  font-size: 2.5rem;
+  font-weight: 700;
+}
+.habit-para2{
+  font-size: 0.7rem;
+}
+
 }
