--- a/style.css
+++ b/style.css
@@ -243,3 +243,100 @@ text-align: center;
    
     
   }
+  /* BMI CALCULATOR START HERE */
+  .sec-bmi{
+    background-color: #222222;
+    margin-top: 60px;
+  }
+  .cal-para1{
+    font-size: 3rem;
+    color: #FFFFFF;
+    font-weight: 800;
+  }
+  .cal-para2{
+    font-size:0.9rem;
+    color: #ffffff6b;
+    
+  }
+  .table-calculator{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 120px;
+  }
+  .Bmi-cal-para{
+    margin:auto 300px;
+    
+  }
+  .table-herd{
+    font-size: 1rem;
+    color: #FFFFFF;
+    font-weight: bold;
+  }
+  .table-data{
+    font-size: 0.9rem;
+    color: #ffffff6b;
+  }
+  table{
+    border: 1px solid #ffffff6b;
+    border-collapse: collapse;
+    margin-bottom: 30px;
+  }
+  th{
+    border: 1px solid #ffffff6b;
+    width: 200px;
+    height: 50px;
+  }
+  td{
+    border: 1px solid #ffffff6b;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+  }
+  Caption{
+    font-size: 1.8rem;
+    color: #FFFFFF;
+    font-weight: 800;
+    margin: 30px 0;
+  }
+  .right-cal{
+    margin-top: 30px ;
+    margin-bottom: 60px;
+  }
+  .cal-right-para1{
+    font-size: 1.8rem;
+    color: #FFFFFF;
+    font-weight: 800;
+  }
+  .cal-right-para2{
+    font-size:0.9rem;
+    color: #ffffff6b;
+    margin: 20px 0;
+  }
+  input{
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: #383838;
+    font-size: 1rem;
+    border: none;
+    text-align: center;
+    margin: 0 5px;
+   }
+
+   select{
+    width: 200px;
+    height: 40px;
+    border-radius: 5px;
+    background-color: #383838;
+    font-size: 1rem;
+    border: none;
+    text-align: center;
+    color: #ffffff6b;
+    margin: 0 5px;
+   }
+   .Activity{
+    width: 412px;
+    height: 40px;
+    margin-bottom: 20px;
+   }
+  
