--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 .container{
   max-width: 1200px;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin: auto;
   
 }
@@ -68,7 +68,7 @@ justify-content: space-between;
 .top-div-right{
   width: 600px;
   height: 440px;
-  border: 2px solid aqua;
+  /* border: 2px solid aqua; */
   margin-top: 70px;
   overflow: hidden;
  
@@ -107,7 +107,7 @@ font-weight: 800;
 .top-img{
   width: 350px;
   height: 580px;
-  border: 2px solid aqua;;
+  /* border: 2px solid aqua; */
   margin-right: 30px;
   overflow: hidden;
   
@@ -205,7 +205,7 @@ text-align: center;
   margin: auto 80px;
   background-color: #222222;
   border-radius: 30px;
- border:3px solid red;
+ /* border:3px solid red; */
   margin-top: 40px;
  }
  .run-para1{
@@ -265,6 +265,7 @@ text-align: center;
   }
   .Bmi-cal-para{
     margin:auto 300px;
+    margin: 50px 50px  50px 320px;
     
   }
   .table-herd{
@@ -339,4 +340,111 @@ text-align: center;
     height: 40px;
     margin-bottom: 20px;
    }
-  
+
+   /* TRAINER SECTION START HERE */
+   
+   .train-top-div{
+    text-align: center;
+    margin: 40px 0px ;
+   }
+   .train-top-para1{
+    font-size: 4rem;
+    color: #FFFFFF;
+    font-weight: 800;
+   }
+   .train-top-para2{
+    font-size: 0.9rem;
+    color: #ffffff6b;
+    
+   }
+   
+   .team-main-div{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap:10px ;
+    background-color: #222222;
+    padding: 20px;
+    
+   }
+   .img-team{
+    max-width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 30px;
+   }
+   .tariner-pic{
+    position: relative;
+   }
+   .team-para-div{
+    position: absolute;
+    color: #E6533C;
+    top:320px;
+    left: 30px;
+
+   }
+   .team-para1{
+    font-size: 1.5rem;
+    color: #FFFFFF;
+   }
+   .team-para2{
+    font-size: 1rem;
+    color: #ffffff83;
+   }
+
+   /* FOOTER SECTION START HERE */
+   .sec-footer{
+    background-color: #222222;
+   }
+   footer{
+    background-color: #222222;
+    margin: 60px;
+    padding: 40px 0;
+   }
+   
+   .footer-flx-div{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px 0;
+    
+
+   } 
+   .footer-p{
+    color: #E6533C;
+    font-size: 3.2rem;
+    font-style: italic;
+    font-weight: 900;
+   }
+   
+   
+   .footer-para2{
+    font-size: 0.9rem;
+    color: #ffffff6b;
+    margin-top: 20px;
+     
+   }
+   .footer-para23{
+    font-size: 2rem;
+    color: #FFFFFF;
+    font-weight: 800;
+    margin-bottom: 20px;
+   }
+   .footer-div2 h4{
+    font-size: 0.8rem;
+    color:#ffffff6b ;
+    margin: 15px 0;
+   }
+   hr{
+    margin: 20px 0;
+    width:100%;
+    border: 1px solid #ffffff33;
+    border-width: 0.01rem;
+   
+   }
+   .fotter-last-para{
+    color: #ffffff6b;
+    font-size: 1.25rem;
+    text-align: center;
+    margin-bottom:20px ;
+   }
+   
+   
