--- a/style.css
+++ b/style.css
@@ -4,9 +4,12 @@
   box-sizing: border-box;
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url('https://fonts.cdnfonts.com/css/miama');
+
 body{
   font-family: "Inter", sans-serif;
   background-color: black;
+  
   
 }
 .container{
@@ -17,18 +20,29 @@ body{
 }
 
       /* NAVBER STAR */
+  .top-section{
+      background: linear-gradient(to bottom,  #232323 40% ,black);
+     /* margin-top: -50px; */
+    }
+span{
+  font-family: 'Miama', sans-serif;
+  font-size:6rem;
+  font-weight: 100;
+}
 
-.flex-nav{
+  .flex-nav{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 50px;
+  /* margin-top: 10px; */
 }
+
 .nav-p{
 color: #E6533C;
 font-size: 3.2rem;
 font-style: italic;
 font-weight: bolder;
+margin-top: 20px;
 }
 .list-items{
   display: flex;
@@ -39,6 +53,7 @@ font-weight: bolder;
   border-radius: 30px;
   padding: 10px 0;
   align-items: center;
+  margin-top: 20px;
  
 }
 .list-items li{
@@ -77,6 +92,7 @@ justify-content: space-between;
 font-size: 4rem;
 color: #FFFFFF;
 font-weight: 800;
+
 }
 .top-para2{
   color: #ffffff4d;
