--- a/media.css
+++ b/media.css
@@ -179,13 +179,203 @@ margin-top: 30px;
   
 }
 
-
-@media screen and (max-width:430px){
-
-  footer-flx-div{
-    margin-left: 30px;
+@media screen and (max-width:425px){
+ 
+  .flex-nav{
+  
+  width: 400px;
+  margin-left: 0;
+  text-align: center;
   }
+  .nav-p{
+    color: #E6533C;
+    font-size: 2.5rem;
+    margin-top: 5px;
+    
+    }
+    .hamberger{
+      color: #FFFFFF;
+      
+    }
+  
+  
+  
+  .top-section{
+    margin: auto;
+    width: 500px;
+  }
+  .top-div-right{
+    width: 300px;
+    height: 250px;
+    margin: 30px 0 0 10px;
+  }
+  .top-para1{
+    font-size: 2rem;
+    font-weight: 800;
+    line-height: 110%;
+    
+    }
+    .top-para2{
+      color: #ffffff4d;
+      font-size: 0.7rem;
+      
+    }
+    .top-btn1{
+      background-color: #E6533C;
+      font-size: 0.8rem;
+      padding: 10px;
+      border-radius: 40px;
+      width: 130px;
+      }
+    .top-btn2{
+      font-size: 0.8rem;
+      padding: 10px;
+      width: 130px;
+      margin-left: 10px;
+    }
+    .top-img{
+      width: 330px;
+      height: 520px;
+      
+      margin-left: 10px;
+      overflow: hidden;
+      
+    }
+    .floting-btn1{
+      width: 120px;
+      height: 60px;
+      border-radius: 10px;
+      padding: 4px;
+      top: 600px;
+      left: 70px;
+    
+    }
+    .floting-btn2{
+      width: 120px;
+      height: 60px;
+     
+      
+      border-radius: 10px;
+      padding: 10px ;
+      position: absolute;
+      top: 400px;
+      left: 200px;
+      
+    }
+
+    .floting-p1{
+      font-size: 1rem;
+      color: #FFFFFF;
+      font-weight: bold;
+    }
+    .floting-p2{
+      font-size: 0.8rem;
+      color: #ffffff6b;
+      
+    }
+    .circle{
+      font-size: 20px;
+      color: #E6533C;
+    }
+    .habit-para{
+      text-align: center;
+      margin-top: 30px;
+      margin-left: 40px;
+    }
+    .habit-para1{
+      font-size: 2rem;
+      
+      font-weight: 700;
+      margin-bottom:10px ;
+    }
+    .habit-para2{
+      font-size: 0.6rem;
+      
+    }
+
+    .run-main-div{
+      /* margin: auto 30px; */
+      /* border:3px solid red; */
+      margin-top: 30px;
+      margin-left: 60px;
+      
+     }
+     .run-para1{
+     font-size: 2rem;
+     font-weight: 800;
+     color: #FFFFFF;
+     }
+     .run-para2{
+      font-size: 0.6rem;
+       margin: 15px 0;
+      color: #ffffff6b;
+      }
+      .run-btn{
+        font-size: 1rem;
+        padding: 10px;
+        border-radius: 40px;
+        width: 160px;
+        margin: 5px ;
+        }
+      .run-right-div{
+        margin: 10px 0px 10px 30px;
+      }
+      .run-img{
+        margin: 20px 0;
+       }
+      .run-img img{
+      width:90%;
+      height: 220px;
+      border-radius: 15px;
+      margin-left: 20px;
+       }
+       
+       .right-cal{
+        margin-top: 0px;
+       }
+       .sec-bmi{
+        width: 500px;
+      }
+      .table-calculator{
+        gap: 30px;
+      }
+      
+     .cal-right-para2{
+        font-size:0.8rem;
+        }
+        .run-btn{
+         font-size: 1.4rem;
+        width: 300px;
+        }
+     .train-top-para1{
+        font-size: 2.5rem;
+          color: #FFFFFF;
+          font-weight: 800;
+         }
+     .train-top-para2{
+          font-size: 0.6rem;
+      }
+    .img-team{
+        max-width: 100%;
+        height: 350px;
+        object-fit: cover;
+        border-radius: 20px;
+       }
+       .team-para1{
+        font-size: 1rem;
+      }
+       .team-para2{
+        font-size: 0.8rem;
+        }
+     .team-para-div{
+      top:300px;
+    }
+    .sec-footer{
+      width: 500px;
+    }
+    
 }
+
 
 
 
